load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    prefix = "github.com/googleinterns/aso_sxs_viewer",
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/googleinterns/aso_sxs_viewer",
    visibility = ["//visibility:private"],
    deps = [
        "//config:go_default_library",
        "//createwindow:go_default_library",
        "//event:go_default_library",
        "@com_github_jezek_xgb//xproto:go_default_library",
    ],
)

go_binary(
    name = "aso_sxs_viewer",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
