load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["command.go"],
    importpath = "github.com/googleinterns/aso_sxs_viewer/command",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["command_test.go"],
    data = ["//command/tests"],
    embed = [":go_default_library"],
)
