load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "command.go",
        "websocket.go",
    ],
    importpath = "github.com/pallavagarwal07/aso_sxs_viewer/command",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "command_test.go",
        "websocket_test.go",
    ],
    data = [
        "//command/testdata/ack_signal",
        "//command/testdata/mock_chrome",
        "//command/testdata/infinite_loop",
    ],
    embed = [":go_default_library"],
    deps = ["@io_bazel_rules_go//go/tools/bazel:go_default_library"],
)
