load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "default.go",
    ],
    importpath = "github.com/googleinterns/aso_sxs_viewer/config",
    visibility = ["//visibility:public"],
    deps = [
        "//proto:go_default_library",
        "@org_golang_google_protobuf//encoding/prototext:go_default_library",
    ],
)
