load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "config_proto",
    srcs = ["config.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "config_go_proto",
    importpath = "github.com/pallavagarwal07/aso_sxs_viewer/proto",
    proto = ":config_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":config_go_proto"],
    importpath = "github.com/pallavagarwal07/aso_sxs_viewer/proto",
    visibility = ["//visibility:public"],
)
