load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "fakeinput.go",
        "main.go",
    ],
    importpath = "github.com/googleinterns/aso_sxs_viewer/virtualmouse",
    visibility = ["//visibility:private"],
    deps = [
        "//command:go_default_library",
        "@com_github_jezek_xgb//:go_default_library",
        "@com_github_jezek_xgb//xproto:go_default_library",
        "@com_github_jezek_xgb//xtest:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["fakeinput_test.go"],
    embed = [":go_default_library"],
)
