load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "fakeinput.go",
        "main.go",
    ],
    importpath = "github.com/pallavagarwal07/aso_sxs_viewer/virtualmouse",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_burntsushi_xgb//:go_default_library",
        "@com_github_burntsushi_xgb//xproto:go_default_library",
        "@com_github_burntsushi_xgb//xtest:go_default_library",
    ],
)

go_binary(
    name = "virtualmouse",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["fakeinput_test.go"],
    embed = [":go_default_library"],
)
