load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/googleinterns/aso_sxs_viewer/command/testdata/mock_chrome",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "mock_chrome",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
