load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["test_websocket_infinite_program.go"],
    importpath = "github.com/googleinterns/aso_sxs_viewer/command/tests/sample_program_websocket_test_inf",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "sample_program_websocket_test_inf",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
